fix title not showing

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,6 +6,7 @@
   height: 100%;
   width: 100%;
   min-width: 800px;
+  font-family: 'Roboto', sans-serif;
   mat-drawer-container {
     background: #fff;
     height: 100%;
